static/css/style.css
/* ... */
.slide img {
    width: 100%;
}

.slide {
    display: none;
}

.active {
    display: block;

}

/* cards sections */
.section-title {
    display: grid;
    grid-template-columns: auto auto;
    width: 90%;
    margin: 10px auto;
    justify-content: space-around;
    align-items: center;
}

.section-title h3 {
    font-weight: 600;
    font-size: 24px;
    line-height: 32px;
    color: #192024;
}

.btn-outline-secondary:hover,
.btn-outline-secondary:active,
.btn-outline-secondary:visited {
    background-color: var(--orange-pantone) !important;
}

.btn-outline-secondary {
    border: 2px solid var(--orange-pantone);
    font-family: var(--font);
}


.card-container {
    width: 90%;
    margin: 10px auto;
    display: grid;
    grid-template-columns: auto auto auto auto;
    justify-content: center;
    align-items: center;
}

.card-title {
    font-size: 14px;
    font-family: var(--font);
    font-weight: 600;
    font-size: 14px;
    line-height: 20px;
    color: #192024;
    margin: 12px 0 2px;
}


.card-wrapper {
    margin: 10px;
    padding-bottom: 30px;
    border-radius: 5px;
}

.card-wrapper img {
    border-radius: 10px;
    width: 300px;
    height: 310px;
    object-fit: cover;
}

.card-wrapper>img:hover {
    opacity: 0.7;
}


.price {
    font-weight: 600;
    font-size: 16px;
    line-height: 24px;
    font-family: var(--font);
}

.card-star i {
    font-size: 14px;
    color: var(--orange-pantone);
}

.card-star span {
    font-size: 14px;
    color: var(--gun-metal);
    font-family: var(--font);
    font-weight: 600;
}

.ACCOM_type {
    color: white;
    padding: 2px 30px;
    text-align: center;
    display: inline-block;
    font-size: 16px;
    border-radius: 10px;
}

.green {
    background-color: #4CAF50;
}

.blue {
    background-color: #008CBA;

}

.red {
    background-color: #f44336;
}
/* ------------------------------------Cart */
.cart{
    position: relative;
}
.cart_quantity{
    background-color: var(--orange-pantone);
    width:25px;
    height:25px;
    border-radius: 50%;
    position: absolute;
    left:15px;
    top:20px;
    color:white;
    line-height: 10px 50px;
    padding-left: 8px;
}


/* ----------------Animation for home*/
@keyframes typing {
    0% {
        width: 0;
        color: var(--white);
    }
}

@keyframes blink {
    50% {
        border-color: transparent;
        border-right: 3px solid;
    }
}

.center {
    margin: 100px auto;
    width: 200px;
}





/* ------------------------------------------------------------------search classes */

.no-result {
    margin-top: 100px;
}

.site-color {
    color: var(--orange-pantone)
}

/* -------------------------------------------------------------------- detail page */
.item-detail-and-image-container {
    width: 100%;
    margin: auto;
    display: grid;
    grid-template-columns: auto auto;
    justify-content: center;
    grid-column-gap: 100px;
    padding: 20px;
}

.detail-title {
    font-size: 1.25rem;
    font-weight: 600;
    text-align: center;
    margin-top: 50px;
}

.main-image img {
    width: 500px;
    height: 500px;
    border-radius: 10px;
    object-fit: cover;
}

.detail-price {
    font-family: var(--font);
    font-size: 20px;
    ;

}

.item-detail {
    padding: 1.5rem;
    width: 420px;
    height: 500px;
}

.photos {
    width: 500px;
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    margin-top: 10px;
}

.thumbnails {
    padding: 5px;
    border-radius: 10px;
    opacity: 0.5;
    width: 100px;
    height: 70px;
    object-fit: cover;
    cursor: pointer;
}

.photos-and-icon-wrapper {
    position: relative;
}

#arrow-left {
    position: absolute;
    left: -35px;
    top: 23px;
    border-radius: 50%;
    cursor: pointer;
    transition: .3s;
    font-size: 30px;

}

#arrow-right {
    position: absolute;
    right: -35px;
    top: 23px;
    border-radius: 50%;
    cursor: pointer;
    transition: .3s;
    font-size: 30px;
}

.active-image {
    opacity: 1;
    border: 2px solid var(--orange-pantone);
}

#arrow-left:hover,
#arrow-right:hover {
    opacity: 0.5;
}

.overview {
    width: 55%;
    margin: 50px auto;
    text-align: justify;
}

/* Review section */
.review-title {
    margin-top: 10px;
    font-family: var(--font);
    font-size: 30px;
    text-align: center;
}

.reviews {
    font-family: var(--font);
    font-size: 15px;
    margin: auto;
    width: 70%;
}

.sub_container {
    margin: 20px;
}

#user_circle {
    font-size: 30px;
}

.user_name {
    top: -5px;
    position: relative;
    color: var(--black);
}

.date_created {
    color: rgb(86, 89, 89);
    font-size: 14px;
    margin: 0px;
    padding: 0px;
}

.review_content {
    color: rgb(15, 17, 17);
    font-family: var(--font);
    font-size: 14px;
    margin: 0px;
    padding: 0px;
}

/* review form */
.review-form {
    width: 300px;
    margin: auto;
}

.txt-center {
    text-align: center;
}

.hide {
    display: none;
}

.clear {
    float: none;
    clear: both;
}

.rating {
    unicode-bidi: bidi-override;
    direction: rtl;
    text-align: center;
    position: relative;
    float: left;
    line-height: 23px;
}

.rating>label {
    float: right;
    display: inline;
    padding: 0;
    margin: 0;
    position: relative;
    width: 1.1em;
    cursor: pointer;
    color: var(--orange-pantone);
    font-size: 25px;
}

.rating>label:hover,
.rating>label:hover~label,
.rating>input.radio-btn:checked~label {
    color: transparent;
}

.rating>label:hover:before,
.rating>label:hover~label:before,
.rating>input.radio-btn:checked~label:before,
.rating>input.radio-btn:checked~label:before {
    content: "\2605";
    position: absolute;
    left: 0;
    color: var(--orange-pantone);
}

.rating-container {
    display: grid;
    grid-template-columns: auto auto;
    justify-content: start;
    grid-column-gap: 10px;
}

.message {
    text-align: center;
    width: 30%;
    margin: auto;
}
/* ... */

