Fix last div in excursion.html and add z-index to active

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,7 +176,7 @@ body {
 
 .active {
     display: block;
-
+    z-index: -1;
 }
 
 /* cards sections */
